--- a/bank.html
+++ b/bank.html
@@ -38,7 +38,7 @@
     <link href="styles/hamburgers.min.css" rel="stylesheet">
     <link href="styles/animation.css" rel="stylesheet">
     <link href="styles/menu_button.css" rel="stylesheet">
-    <title>Банкинг - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)</title>
+    <title>Банкінг - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)</title>
   </head>
   <body>
     <div class="container nav-container">
@@ -217,11 +217,11 @@
                   </li>
                   <li>
                     <div class="icon webmoney ru"></div><a href="https://www.webmoney.ru/" target="_blank">webmoney.ru</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
                     <div class="icon money yandex ru"></div><a href="https://money.yandex.ru/" target="_blank">money.yandex.ru</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
                     <div class="icon qiwi com"></div><a href="https://qiwi.com/" target="_blank">qiwi.com</a>
