--- a/communal.html
+++ b/communal.html
@@ -38,7 +38,7 @@
     <link href="styles/hamburgers.min.css" rel="stylesheet">
     <link href="styles/animation.css" rel="stylesheet">
     <link href="styles/menu_button.css" rel="stylesheet">
-    <title>Комуналка - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)</title>
+    <title>Комуналка - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)</title>
   </head>
   <body>
     <div class="container nav-container">
@@ -115,11 +115,11 @@
                       <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
                   </li>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://ok.kiroe.com.ua/home" target="_blank">Кабінет електро 2022</a>
+                    <div class="icon a0pencil-1" title="Текстова інформація" alt=""></div><a href="https://ok.kiroe.com.ua/home" target="_blank">Кабінет електро 2022</a>
                     <div class="icontooinfo a0repa3" title="Особистий кабінет побутового споживача ПрАТ Кіровоградобленерго" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://koek.billing.city/login" target="_blank">Кабінет електро 2020</a>
+                    <div class="icon a0pencil-1" title="Текстова інформація" alt=""></div><a href="https://koek.billing.city/login" target="_blank">Кабінет електро 2020</a>
                     <div class="icontooinfo a0repa3" title="Огляд листівки від КОЕК" alt=""></div><a href="https://youtu.be/qIJYbNR_l6g" target="_blank">
                       <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
                   </li>
@@ -166,7 +166,7 @@
                       <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
                   </li>
                   <li>
-                    <div class="icon novom ulan in ua"></div><a href="http://novom.ulan.in.ua/" target="_blank">novom.ulan.in.ua</a><span class="opisi">Ulan ISP</span>
+                    <div class="icon optonet com ua"></div><a href="https://optonet.com.ua/" target="_blank">optonet.com.ua</a><span class="opisi">Optonet</span>
                   </li>
                   <li>
                     <div class="icon shtorm net"></div><a href="https://www.shtorm.net/uk" target="_blank">shtorm.net</a><span class="opisi">Shtorm</span>
