--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="WebSIS &amp; Company">
     <meta name="keywords" content="best sait, лучшие сайты, популярные сайты, каталог сайтов, быстрые ссылки, cписок найпопулярніших веб-сайтів, zakladki, top, топ сайтів, speeddial, новости, соцсети, видео, погода">
-    <meta name="description" content="Полный список самых популярных сайтов интернета. Удобный каталог сайтов с сортировкой по тематике. Все топ сайты в одном месте. Все для удобства в интернете.">
+    <meta name="description" content="Повний перелік найпопулярніших веб-сайтів вебу. Зручний каталог сайтів із сортуванням за тематикою. Усі топ сайти в одному місці. Все для зручності в Інтернеті.">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <!-- Player-top-->
     <script src="//zakladki.github.io/playerjs.js" type="text/javascript"></script>
@@ -81,8 +81,8 @@
                   </li>
                   <!--li
                   div.yandex.icon
-                  a(href='https://yandex.ua/', target='_blank') Поиск Yandex
-                  div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+                  a(href='https://yandex.ua/', target='_blank') Пошук Yandex
+                  div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
                   -->
                   <li>
                     <div class="icon translate google com ua"></div><a href="https://translate.google.com.ua/" target="_blank">Перекладач Google</a>
@@ -110,12 +110,12 @@
                   <!--li
                   div.icon.vk.com
                   a(href='https://vk.com/', target='_blank') ВКонтакте
-                  div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+                  div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
                   -->
                   <!--li
                   div.icon.ok.ru
                   a(href='https://ok.ru/', target='_blank') Однокласники
-                  div.icontoo.a0VPN1(title='Для работы нужен VPN', alt='')
+                  div.icontoo.a0VPN1(title='Для роботи потрібний VPN', alt='')
                   -->
                   <li>
                     <div class="icon gmail"></div><a href="https://mail.google.com" target="_blank">пошта_gmail</a>
@@ -128,7 +128,7 @@
                   </li>
                   <li>
                     <div class="icon e mail ru"></div><a href="https://e.mail.ru/login" target="_blank">пошта_mail.ru</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                 </ul>
               </div>
@@ -239,21 +239,24 @@
                       <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Процес реєстрації та огляд особистого кабінету на офіційному сайті компанії ТОВ Кіровоградська обласна ЕК" alt=""></div></a>
                   </li>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://ok.kiroe.com.ua/home" target="_blank">Кабінет електро 2022</a>
+                    <div class="icon a0pencil-1" title="Текстова інформація" alt=""></div><a href="https://ok.kiroe.com.ua/home" target="_blank">Кабінет електро 2022</a>
                     <div class="icontooinfo a0repa3" title="Особистий кабінет побутового споживача ПрАТ Кіровоградобленерго" alt=""></div>
                   </li>
                   <li>
                     <div class="icon ukrtelecom ua"></div><a href="https://ukrtelecom.ua/" target="_blank">ukrtelecom</a><span class="opisi">Оплата</span><a href="https://youtu.be/WYhA_JFRVik" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
+                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Як дізнатися суму заборгованості та її сплатити" alt=""></div></a>
                   </li>
                   <li>
                     <div class="icon my vega ua"></div><a href="https://my.vega.ua/" target="_blank">Vega Telecom</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Комуналка. Vega Telecom - Національний телеком-оператор в Україні" alt=""></div><a href="https://youtu.be/4accV-xUU30" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Переход абонентов Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком" alt=""></div></a><a href="https://youtu.be/nsknyxq9alo" target="_blank">
-                      <div class="icontooinfo a0youtubeinform" title="Видеоинструкция. Как узнать суму задолженности и ее оплатить" alt=""></div></a>
+                    <div class="icontooinfo a0repa3" title="Розділ-Комуналка. Vega Telecom - Національний телеком-оператор в Україні" alt=""></div><a href="https://youtu.be/4accV-xUU30" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Перехід абонентів Укртелеком ОПТИКИ (FTTB) на ВЕГА Телеком" alt=""></div></a><a href="https://youtu.be/nsknyxq9alo" target="_blank">
+                      <div class="icontooinfo a0youtubeinform" title="Відеоінструкція. Як дізнатися суму заборгованості та її сплатити" alt=""></div></a>
                   </li>
                   <li>
-                    <div class="icon skylink_vk"></div><a href="http://sky-link.com.ua/" target="_blank">Sky-link</a>
+                    <div class="icon optonet com ua"></div><a href="https://optonet.com.ua/" target="_blank">optonet.com.ua</a><span class="opisi">Optonet</span>
+                  </li>
+                  <li>
+                    <div class="icon shtorm net"></div><a href="https://www.shtorm.net/uk" target="_blank">shtorm.net</a><span class="opisi">Shtorm</span>
                   </li>
                   <li>
                     <div class="icon kyivstar ua"></div><a href="https://kyivstar.ua/" target="_blank">kyivstar.ua</a>
@@ -282,7 +285,7 @@
                     <div class="icon payoneer com"></div><a href="https://www.payoneer.com/" target="_blank">payoneer</a><span class="opisi">Інтерн.гаманець</span>
                   </li>
                   <li>
-                    <div class="icon payeer com"></div><a href="https://payeer.com/?partner=1687223" target="_blank">payeer`</a><span class="opisi">Інтерн.гаманець</span>
+                    <div class="icon payeer com"></div><a href="https://payeer.com/" target="_blank">payeer</a><span class="opisi">Інтерн.гаманець</span>
                   </li>
                   <li>
                     <div class="icon minfin com ua"></div><a href="https://minfin.com.ua/currency/" target="_blank">minfin.com.ua</a><span class="opisi">Курс валют</span>
@@ -334,35 +337,35 @@
                     <div class="icon letyshops com"></div><a href="https://letyshops.com/ua/soc/sh-1?r=2739789" target="_blank">Letyshops`</a><span class="opisi">Все дешевле</span>
                   </li>
                   <li>
-                    <div class="icon best aliexpress com"></div><a href="https://letyshops.com/r/aliexpress-ww-288bce24ac9a" target="_blank">best.aliexpress.com`</a>
+                    <div class="icon best aliexpress com"></div><a href="https://best.aliexpress.com" target="_blank">best.aliexpress.com`</a>
                   </li>
                   <li>
-                    <div class="icon rozetka com ua"></div><a href="https://letyshops.com/r/rozetka-1bf2104efe2d" target="_blank">rozetka.com.ua`</a>
+                    <div class="icon rozetka com ua"></div><a href="https://rozetka.com.ua" target="_blank">rozetka.com.ua`</a>
                   </li>
                   <li>
-                    <div class="icon allo ua"></div><a href="https://letyshops.com/r/allo-fdff83d9e607" target="_blank">allo.ua`</a>
+                    <div class="icon allo ua"></div><a href="https://allo.ua" target="_blank">allo.ua`</a>
                   </li>
                   <li>
-                    <div class="icon moyo ua"></div><a href="https://letyshops.com/r/moyo-ua-98af1fd3453d" target="_blank">moyo.ua`</a>
+                    <div class="icon moyo ua"></div><a href="https://moyo.ua" target="_blank">moyo.ua`</a>
                   </li>
                   <li>
-                    <div class="icon stylus ua"></div><a href="https://letyshops.com/r/stylus-20dc1c96e7c7" target="_blank">stylus.ua`</a>
+                    <div class="icon stylus ua"></div><a href="https://stylus.ua" target="_blank">stylus.ua`</a>
                   </li>
                   <li>
-                    <div class="icon skidka ua"></div><a href="https://letyshops.com/r/skidka-ua-38859dfd47b9" target="_blank">skidka.ua`</a>
+                    <div class="icon skidka ua"></div><a href="https://skidka.ua" target="_blank">skidka.ua`</a>
                   </li>
                   <li>
-                    <div class="icon f ua"></div><a href="https://letyshops.com/r/f-ua-tot-samyi-magazin-eacd5b66c959" target="_blank">f.ua`</a>
+                    <div class="icon f ua"></div><a href="https://f.ua" target="_blank">f.ua`</a>
                   </li>
                   <li>
-                    <div class="icon xiaomi ua"></div><a href="https://letyshops.com/r/xiaomi-ua-d11562e6217b" target="_blank">xiaomi.ua`</a>
+                    <div class="icon xiaomi ua"></div><a href="https://xiaomi.ua" target="_blank">xiaomi.ua`</a>
                   </li>
                   <li>
-                    <div class="icon intertop ua"></div><a href="https://letyshops.com/r/intertop-ua-d4e3bd859cbf" target="_blank">intertop.ua`</a>
+                    <div class="icon intertop ua"></div><a href="https://intertop.ua" target="_blank">intertop.ua`</a>
                   </li>
                   <li>
-                    <div class="icon med-magazin ua"></div><a href="https://letyshops.com/r/med-magazin-ua-db16742e5c0c" target="_blank">med-magazin.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Med-Magazin - сеть магазинов медтехники, медоборудования и товаров для здоровья в Украине" alt=""></div>
+                    <div class="icon med-magazin ua"></div><a href="https://med-magazin.ua" target="_blank">med-magazin.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Med-Magazin - мережа магазинів медтехніки, медобладнання та товарів для здоровя в Україні" alt=""></div>
                   </li>
                   <li>
                     <div class="icon apteka24 ua"></div><a href="https://www.apteka24.ua/" target="_blank">apteka24.ua</a>
@@ -377,16 +380,16 @@
                   </li>
                   <li>
                     <div class="icon rutracker org"></div><a href="https://rutracker.org/" target="_blank">rutracker.org</a>
-                    <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
+                    <div class="icontooinfo a0_Group_m" title="Для завантаження потрібна програма TORRENT" alt=""></div>
                   </li>
                   <li>
                     <div class="icon nnmclub to"></div><a href="http://nnmclub.to/" target="_blank">nnmclub.to</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
-                    <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
+                    <div class="icontooinfo a0_Group_m" title="Для завантаження потрібна програма TORRENT" alt=""></div>
                   </li>
                   <li>
                     <div class="icon filmitorrent"></div><a href="http://filmitorrent.net/" target="_blank">filmitorrent_TOP</a>
-                    <div class="icontooinfo a0_Group_m" title="Для скачивания нужна программа TORRENT" alt=""></div>
+                    <div class="icontooinfo a0_Group_m" title="Для завантаження потрібна програма TORRENT" alt=""></div>
                   </li>
                   <li>
                     <div class="icon rutor info"></div><a href="http://rutor.info/" target="_blank">rutor.info</a>
@@ -431,7 +434,7 @@
                   </li>
                   <li>
                     <div class="icon vk com"></div><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">ринок.БАРАХОЛКА</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/channel/UCKjCg071hg21YxymgDfz5TA" target="_blank">Youtube_г.Новомиргород</a>
@@ -454,36 +457,36 @@
                 <div class="group-title"><a href="http://zakladki.at.ua/" target="_blank"><span class="badge badge-danger">Обновки в закладках: v.2022-03-30</span></a></div>
                 <ul>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://war.ukrzen.in.ua/alerts/" target="_blank">Карта повітряних тривог</a>
+                    <div class="icon a0pencil-1" title="Текстова інформація" alt=""></div><a href="https://war.ukrzen.in.ua/alerts/" target="_blank">Карта повітряних тривог</a>
                     <div class="icontooinfo a0repa3" title="Візуалізація, - онлайн карта повітряних тривог в Україні" alt="">       </div>
                   </li>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://liveuamap.com/" target="_blank">Карта війни в Україні</a>
+                    <div class="icon a0pencil-1" title="Текстова інформація" alt=""></div><a href="https://liveuamap.com/" target="_blank">Карта війни в Україні</a>
                     <div class="icontooinfo a0repa3" title="Візуалізація, - онлайн карта бойових дій в Україні" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon repka ua"></div><a href="https://letyshops.com/r/repka-ua-7352c7232593" target="_blank">repka.ua`</a>
-                    <div class="icontooinfo a0repa3" title="Repka.UA - Лучший сервис и условия доставки по всей Украине. Ноутбуки Смартфоны Бытовая техника Наручные часы Товары для отдыха" alt=""></div>
+                    <div class="icon repka ua"></div><a href="https://repka.ua" target="_blank">repka.ua`</a>
+                    <div class="icontooinfo a0repa3" title="Repka.UA - Кращий сервіс та умови доставки по всій Україні. Ноутбуки Смартфони Побутова техніка Наручний годинник Товари для відпочинку" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0pencil-1" title="Текстовая информация" alt=""></div><a href="https://covid19.who.int/" target="_blank">Карта коронавіруса MIR</a>
-                    <div class="icontooinfo a0repa3" title="Вся статистика по коронавирусу, по всей земле" alt=""></div>
+                    <div class="icon a0pencil-1" title="Текстова інформація" alt=""></div><a href="https://covid19.who.int/" target="_blank">Карта коронавіруса MIR</a>
+                    <div class="icontooinfo a0repa3" title="Вся статистика з коронавірусу, по всій землі" alt=""></div>
                   </li>
                   <li>
                     <div class="icon silvergames"></div><a href="https://www.silvergames.com/ru/" target="_blank">silvergames.com</a>
-                    <div class="icontooinfo a0repa7" title="Играть В Классные Бесплатные Онлайн Игры На Silvergames.com" alt=""></div>
+                    <div class="icontooinfo a0repa7" title="Грати в класні безкоштовні онлайн ігри на Silvergames.com" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Обновка.MP3.UA+ZAP</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Медиа. Обновлен плеер для прослушивания украинской/русской/зарубежной музыки" alt=""></div>
+                    <div class="icon a0youtubeinform" title="Відео інформація" alt=""></div><a href="https://zakladki.github.io/media.html" target="_blank">Обновка.MP3.UA+ZAP</a>
+                    <div class="icontooinfo a0repa3" title="Розділ-Медіа. Оновлено плеєр для прослуховування української/російської/зарубіжної музики" alt=""></div>
                   </li>
                   <li>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка ZAKLADOK</a>
-                    <div class="icontooinfo a0repa3" title="Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне" alt=""></div>
+                    <div class="icon a0youtubeinform" title="Відео інформація" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка ЗАКЛАДОК</a>
+                    <div class="icontooinfo a0repa3" title="Як швидко налаштувати ЗАКЛАДКИ на компютері, ноутбуці, смартфоні" alt=""></div>
                   </li>
                   <li>
                     <div class="icon costaction com"></div><a href="http://costaction.com/partner/?PHPSESUD=CEADEE4DA51FAECA3ED6C17C6A9191A5" target="_blank">Зберігання файлів`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Программы. Вы будете получать деньги за каждое скачивание Вашего файла. Просто загрузите файлы на Turbobit.net и Hitfile.net, обменивайтесь ими со своим друзьями, и незнакомцами через блоги, социальные сети, форумы или свои сайты!" alt=""></div>
+                    <div class="icontooinfo a0repa3" title="Розділ-програми. Ви отримуватимете гроші за кожне скачування Вашого файлу. Просто завантажте файли на Turbobit.net та Hitfile.net, обмінюйтеся ними зі своїми друзями та незнайомцями через блоги, соціальні мережі, форуми або свої сайти!" alt=""></div>
                   </li>
                   <!-- тут реклама от ГУГЛ-->
                   <!-- тут реклама от ГУГЛ-->
