--- a/media.html
+++ b/media.html
@@ -38,7 +38,7 @@
     <link href="styles/hamburgers.min.css" rel="stylesheet">
     <link href="styles/animation.css" rel="stylesheet">
     <link href="styles/menu_button.css" rel="stylesheet">
-    <title>Медиа - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)</title>
+    <title>Медіа - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)</title>
   </head>
   <body>
     <div class="container nav-container">
@@ -150,7 +150,7 @@
                 <ul>
                   <li>
                     <div class="icon kinopoisk ru"></div><a href="https://www.kinopoisk.ru/" target="_blank">kinopoisk.ru</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                 </ul>
                 <div class="group">
@@ -229,15 +229,15 @@
                   </li>
                   <li>
                     <div class="icon vk com"></div><a href="https://vk.com/mzk" target="_blank">vk.com/mzk</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
                     <div class="icon vk com"></div><a href="https://vk.com/exclusive_muzic" target="_blank">vk/exclusive_muzic</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
                     <div class="icon vk com"></div><a href="https://vk.com/hit_bit" target="_blank">vk/hit_bit</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
                     <div class="icon web telegram org"></div><a href="https://t.me/music_breakbeat" target="_blank">music_breakbeat (hit_bit)</a><i class="fainfo fab fa-telegram"></i>
