--- a/programs.html
+++ b/programs.html
@@ -38,7 +38,7 @@
     <link href="styles/hamburgers.min.css" rel="stylesheet">
     <link href="styles/animation.css" rel="stylesheet">
     <link href="styles/menu_button.css" rel="stylesheet">
-    <title>Программы - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)</title>
+    <title>Программи - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)</title>
   </head>
   <body>
     <div class="container nav-container">
@@ -88,7 +88,7 @@
                 <div class="group-title"><span class="badge badge-warning">Всякие настройки</span></div>
                 <ul>
                   <li>
-                    <div class="icon a0youtubeinform" title="Видео информация" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка сайта ZAKLADOK</a>
+                    <div class="icon a0youtubeinform" title="Відео інформація" alt=""></div><a href="https://youtu.be/BdZQy6upWFc" target="_blank">Настройка сайта ZAKLADOK</a>
                     <div class="icontooinfo a0repa3" title="Как быстро настроить ZAKLADKI на компьютере, ноутбуке, смартфоне" alt=""></div>
                   </li>
                 </ul>
