--- a/social.html
+++ b/social.html
@@ -38,7 +38,7 @@
     <link href="styles/hamburgers.min.css" rel="stylesheet">
     <link href="styles/animation.css" rel="stylesheet">
     <link href="styles/menu_button.css" rel="stylesheet">
-    <title>Социум - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)</title>
+    <title>Соціум - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)</title>
   </head>
   <body>
     <div class="container nav-container">
@@ -74,37 +74,37 @@
           <div class="row animated fadeIn">
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Загрузить мессенджеры</span></div>
+                <div class="group-title"><span class="badge badge-warning">Завантажити месенджери</span></div>
                 <ul>
                   <li>
-                    <div class="icon telegram"></div><a href="https://tlgrm.ru/apps" target="_blank">Скачать TELEGRAM</a>
+                    <div class="icon telegram"></div><a href="https://tlgrm.ru/apps" target="_blank">Завантажити TELEGRAM</a>
                   </li>
                   <li>
-                    <div class="icon viber"></div><a href="https://www.viber.com/ru/download/" target="_blank">Скачать VIBER</a>
+                    <div class="icon viber"></div><a href="https://www.viber.com/ru/download/" target="_blank">Завантажити VIBER</a>
                   </li>
                   <li>
-                    <div class="icon skype"></div><a href="https://www.skype.com/ru/get-skype/" target="_blank">Скачать SKYPE</a>
+                    <div class="icon skype"></div><a href="https://www.skype.com/ru/get-skype/" target="_blank">Завантажити SKYPE</a>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-warning">Прокачать свой TELEGRAM (канал)</span></div>
+                <div class="group-title"><span class="badge badge-warning">Прокачати свій TELEGRAM (канал)</span></div>
                 <ul>
                   <li>
                     <div class="icon telemetr me"></div><a href="https://telemetr.me/r/yQsP9VE/" target="_blank">telemetr.me`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Телеметр - аналитика/каталог Телеграм-каналов (Условие: free + нужно иметь 500 подписчиков)" alt=""></div><span class="opisi">free500+rek+stat</span>
+                    <div class="icontooinfo a0repa3" title="Розділ-соціум. Телеметр - аналітика/каталог Телеграм-каналів (Умова: free + потрібно мати 500 передплатників)" alt=""></div><span class="opisi">free500+rek+stat</span>
                   </li>
                   <li>
                     <div class="icon tgstat com"></div><a href="https://uk.tgstat.com/" target="_blank">tgstat.com</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Добавление канала в каталог бесплатно/статистика/реклама (Условие: БЕСПЛАТНО добавить любой канал в каталог! +Рекламная площадка УДОБНАЯ)" alt=""></div><span class="opisi">free0+rek+stat</span>
+                    <div class="icontooinfo a0repa3" title="Розділ-соціум. Додавання каналу до каталогу безкоштовно/статистика/реклама (Умова: БЕЗКОШТОВНО додати будь-який канал до каталогу! +Рекламний майданчик Зручний)" alt=""></div><span class="opisi">free0+rek+stat</span>
                   </li>
                   <li>
                     <div class="icon telega in"></div><a href="https://telega.in/?ref=Tjy-BcZy" target="_blank">telega.in`</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Рекламная площадка. (Условие: добавить канал +100 подписчиков.)" alt=""></div><span class="opisi">free100+rek            </span>
+                    <div class="icontooinfo a0repa3" title="Розділ-соціум. Рекламний майданчик. (Умова: додати канал +100 передплатників.)" alt=""></div><span class="opisi">free100+rek            </span>
                   </li>
                   <li>
                     <div class="icon tgrm su"></div><a href="https://tgrm.su/channels/" target="_blank">tgrm.su</a>
-                    <div class="icontooinfo a0repa3" title="Раздел-Социум. Прокачка канала. (Условие: чтобы добавить любой канал в каталог +79 рублей. Поднятия канала в ТОП: 250р/три дня; 500р/на неделю; 1500/на месяц)" alt=""></div><span class="opisi">79р.+top250р.</span>
+                    <div class="icontooinfo a0repa3" title="Розділ-соціум. Прокачування каналу. (Умова: щоб додати будь-який канал у каталог +79 рублів. Підняття каналу в ТОП: 250р/три дні; 500р/на тиждень; 1500/на місяць)" alt=""></div><span class="opisi">79р.+top250р.</span>
                   </li>
                   <!-- тут реклама от ГУГЛ - 3 колонки-вконце 336-280script(async='', src='//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js')
                   --><ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-3065705668384801" data-ad-slot="3116540473"></ins>
@@ -115,7 +115,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Социальные сети - Зарубеж</span></div>
+                <div class="group-title"><span class="badge badge-success">Соціальні мережі - Зарубіж</span></div>
                 <ul>
                   <li>
                     <div class="icon facebook com"></div><a href="https://www.facebook.com/" target="_blank">Facebook.com</a>
@@ -135,20 +135,20 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Социальные сети - Россия</span></div>
+                <div class="group-title"><span class="badge badge-success">Соціальні мережі - россія</span></div>
                 <ul>
                   <li>
                     <div class="icon vk com"></div><a href="https://vk.com/" target="_blank">ВКонтакте</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
                     <div class="icon ok ru"></div><a href="https://ok.ru/" target="_blank">Однокласники</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Социальные сети - Украина</span></div>
+                <div class="group-title"><span class="badge badge-success">Соціальні мережі - Україна</span></div>
                 <ul>
                   <li>
                     <div class="icon ukrface com ua"></div><a href="https://ukrface.com.ua/reg502400" target="_blank">Ukrface.com.ua`</a>
@@ -177,7 +177,7 @@
             </div>
             <div class="col-sm">
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Электронная почта - Зарубеж</span></div>
+                <div class="group-title"><span class="badge badge-success">Електронна пошта - Зарубіж</span></div>
                 <ul>
                   <li>
                     <div class="icon gmail"></div><a href="https://mail.google.com" target="_blank">gmail</a>
@@ -194,15 +194,15 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Электронная почта - Россия</span></div>
+                <div class="group-title"><span class="badge badge-success">Електронна пошта - росія</span></div>
                 <ul>
                   <li>
                     <div class="icon mail yandex ua"></div><a href="https://mail.yandex.ua/" target="_blank">mail.yandex.ua</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
                     <div class="icon e mail ru"></div><a href="https://e.mail.ru/login" target="_blank">e.mail.ru</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
                     <div class="icon mail rambler ru"></div><a href="https://mail.rambler.ru/" target="_blank">mail.rambler.ru</a>
@@ -210,7 +210,7 @@
                 </ul>
               </div>
               <div class="group">
-                <div class="group-title"><span class="badge badge-success">Электронная почта - Украина</span></div>
+                <div class="group-title"><span class="badge badge-success">Електронна пошта - Україна</span></div>
                 <ul>
                   <li>
                     <div class="icon mail ukr net"></div><a href="https://accounts.ukr.net/login" target="_blank">mail.ukr.net</a>
