--- a/city.html
+++ b/city.html
@@ -38,7 +38,7 @@
     <link href="styles/hamburgers.min.css" rel="stylesheet">
     <link href="styles/animation.css" rel="stylesheet">
     <link href="styles/menu_button.css" rel="stylesheet">
-    <title>Городок - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)</title>
+    <title>Городок - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)</title>
   </head>
   <body>
     <div class="container nav-container">
@@ -101,7 +101,7 @@
                   </li>
                   <li>
                     <div class="icon vk com"></div><a href="https://vk.com/novomyrhorod_baraholka" target="_blank">БАРАХОЛКА (рынок)</a>
-                    <div class="icontoo a0VPN1" title="Для работы нужен VPN" alt=""></div>
+                    <div class="icontoo a0VPN1" title="Для роботи потрібний VPN" alt=""></div>
                   </li>
                   <li>
                     <div class="icon youtube"></div><a href="https://www.youtube.com/channel/UCKjCg071hg21YxymgDfz5TA" target="_blank">Youtube_г.Новомиргород</a>
