--- a/games.html
+++ b/games.html
@@ -38,7 +38,7 @@
     <link href="styles/hamburgers.min.css" rel="stylesheet">
     <link href="styles/animation.css" rel="stylesheet">
     <link href="styles/menu_button.css" rel="stylesheet">
-    <title>Игры - ZAKLADKI - Список популярных сайтов (топ/top ЗАКЛАДКИ)</title>
+    <title>Ігри - ЗАКЛАДКИ - Список популярних сайтів (ТОП ЗАКЛАДКИ)</title>
   </head>
   <body>
     <div class="container nav-container">
