--- a/bank.html
+++ b/bank.html
@@ -191,10 +191,10 @@
                     <div class="icon ideabank ua"></div><a href="https://www.ideabank.ua/" target="_blank">ideabank.ua</a>
                   </li>
                   <li>
-                    <div class="icon hotline finance"></div><a href="https://letyshops.com/r/hotline-2342a743341e" target="_blank">hotline.finance`</a>
+                    <div class="icon hotline finance"></div><a href="https://hotline.finance/ua/" target="_blank">hotline.finance`</a>
                   </li>
                   <li>
-                    <div class="icon vuso ua"></div><a href="https://letyshops.com/r/vuso-ua-4e0e53bafbcc" target="_blank">vuso.ua`</a>
+                    <div class="icon vuso ua"></div><a href="vuso.ua" target="_blank">vuso.ua`</a>
                   </li>
                 </ul>
               </div>
